removed trims from drop downs; fixed spacing errors when viewing on smaller devices; dropdowns now display vertically when under 700px

--- a/car-reviews/src/components/MainPage/searchbar.css
+++ b/car-reviews/src/components/MainPage/searchbar.css
@@ -1,31 +1,3 @@
-/* .searchbar-buttons-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-};
-
-.searchbar-button-links {
-    margin-left: 20;
-    margin-right: 20;
-};
-
-@media (max-width: 400px) {
-    .searchbar-buttons-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin: auto;
-    };
-}
-
-@media (max-width: 500px) {
-    .searchbar-buttons-links {
-        margin-bottom: 10px;
-        margin-left: 10;
-        margin-right: 10;
-    };
-} */
-
 .searchbar-buttons {
     margin-bottom: 10px;
 }
@@ -35,5 +7,27 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+    }
+}
+
+@media (max-width: 700px) {
+    .searchfields {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 40%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 525px){
+    .searchfields {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
